# uc

./: .coderabbit.yaml  .gitignore  .pr_agent.toml  AGENTS.md  Cargo.toml  Makefile  README.md  best_practices.md  pr_compliance_checklist.yaml
.claude/skills/uc-benchmark-gate/: SKILL.md
.claude/skills/uc-native-debug/: SKILL.md
.claude/skills/uc-pr-review-loop/: SKILL.md
.codex/: START_HERE.md
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  epic.md  feature.md  task.md
.github/workflows/: agent-surface.yml  benchmark-regression.yml
benchmarks/: README.md  scenarios.md
benchmarks/baselines/: 2026-03-03-compare-hello_world.json  2026-03-03-compare-summary.md  2026-03-03-compare-workspaces.json  2026-03-03-scarb-baseline.json  2026-03-03-scarb-baseline.md  2026-03-03-uc-baseline.json  2026-03-03-uc-baseline.md  2026-03-03-uc-vs-scarb-delta.md  stability-smoke-latest.json  stability-smoke-latest.md
benchmarks/corpora/: deployed-contract-corpus.example.json  deployed-contract-corpus.schema.json  deployed-contract-source-index.example.json  deployed-contract-source-index.schema.json  deployed-contract-source-inventory.example.json  deployed-contract-source-inventory.schema.json
benchmarks/corpora/source-fixtures/scarb_smoke/: Scarb.toml
benchmarks/corpora/source-fixtures/scarb_smoke/src/: lib.cairo
benchmarks/fixtures/scarb_smoke/: README.md  Scarb.toml
benchmarks/fixtures/scarb_smoke/src/: contract_patterns.cairo  lib.cairo  math.cairo
benchmarks/gates/: perf-gate-research.json  perf-gate-smoke.json
benchmarks/scripts/: build_deployed_contract_source_index.sh  compare_benchmark_results.sh  gate_benchmark_summary.sh  generate_deployed_contract_corpus.sh  run_deployed_contract_corpus.sh  run_dual_run_comparator.sh  run_fast_perf_check.sh  run_local_benchmarks.sh  run_native_only_gate.sh  run_native_real_repo_smoke.sh  run_real_repo_benchmarks.sh  run_stability_benchmarks.sh  summarize_corpus_opportunities.py
benchmarks/scripts/lib/: benchmark_host_preflight.sh  native_ci_gate.sh
benchmarks/scripts/tests/: benchmark_host_preflight_test.sh  build_deployed_contract_source_index_test.sh  corpus_opportunity_summary_test.sh  deployed_contract_corpus_test.sh  generate_deployed_contract_corpus_test.sh  native_ci_gate_test.sh  real_repo_benchmark_test.sh
crates/uc-cli/: Cargo.toml  build.rs
crates/uc-cli/src/: benchmark_cmd.rs  cache.rs  commands.rs  daemon.rs  fingerprint.rs  main.rs  main_tests.rs
crates/uc-cli/src/commands/: build.rs  compare.rs  metadata.rs  migrate.rs
crates/uc-cli/tests/: cache_integration.rs
crates/uc-core/: Cargo.toml
crates/uc-core/src/: artifacts.rs  cache.rs  compare.rs  lib.rs  session.rs
docs/: AGENT_FIRST_LAUNCH_MINIMUM_2026-04-24.md  ARCHITECTURE_BLUEPRINT.md  BASELINE_REPORT_2026-03-03.md  BENCHMARK_PLAN.md  COMMAND_SURFACE.md  COMPARATOR_REPORT_2026-03-03.md  CONTRACT_CORPUS_EXPERIMENT_2026-04-25.md  CUTOVER_PLAN.md  FIRST_PROOF.md  KPI_SCORECARD.md  LAUNCH_EVIDENCE_2026-04-25.md  LAUNCH_PREP_2026-04-24.md  NATIVE_TOOLCHAIN_HELPERS.md  OPERATING_MODEL.md  PRODUCT_CHARTER.md  PROJECT_MODEL_STRATEGY.md  RELEASE_NOTES_2026-03-06.md  ROADMAP.md  SCARB_SUNSET_STRATEGY.md  SPEED_SIGNAL_2026-03-03.md  SUPREMACY_RESEARCH_2026-03-06.md
docs/adr/: ADR-001-full-replacement-scope.md  ADR-001-platform-scope.md  ADR-002-first-proof-gates.md
docs/agent/: AGENT_DIAGNOSTICS.md  AGENT_FIRST_COMPILER.md  AGENT_QUICKSTART.md  HUMAN_QUICKSTART.md  PR_BOT_POLICY.md  README.md  REPO_MAP.md
docs/agent/schemas/: agent-eval-report.schema.json  benchmark-report.schema.json  build-report.schema.json  failure-bundle.schema.json  mcp-catalog.schema.json  native-diagnostic.schema.json  native-support-report.schema.json  project-inspect-report.schema.json  replay-report.schema.json  safe-action-report.schema.json
docs/research/: CAIRO_SOURCE_DEEP_RESEARCH_2026-03-06.md  CODEBASE_FINDINGS_2026-03-03.md  DECISION_LOG_2026-03-03.md  MONERO_NATIVE_FRONTEND_PROFILE_2026-04-25.md  README.md  RESEARCH_SYNTHESIS_2026-03-03.md  SUPREMACY_DEEP_RESEARCH_2026-03-05.md  SUPREMACY_ENGINEERING_PLAYBOOK_2026-03-05.md  SUPREMACY_NEXT_BEST_OPTIMIZATION_2026-03-06.md  SUPREMACY_NEXT_STEP_RESEARCH_2026-03-06.md
docs/research/archive/: KHEPRI_DESIGN_REVIEW_MEMO.md  SCARB_PERFORMANCE_RESEARCH_PLAN.md  SCARB_REPLACEMENT_RESEARCH_PLAN.md  khepri-architecture-research-v2.md  khepri-architecture-research.md
scripts/: build_native_toolchain_helper.sh  doctor.sh  install_git_hooks.sh  local_ci_gate.sh  refresh_repo_map.sh  validate_agent_surface.sh
scripts/github/: bootstrap_github_stack.sh
scripts/tests/: build_native_toolchain_helper_test.sh  doctor_test.sh  local_ci_gate_test.sh
toolchains/cairo-2.14/patches/: README.md  cairo-lang-lowering.patch  cairo-lang-sierra-generator.patch
