[workspace]
members = [
  "crates/uc-cli",
  "crates/uc-core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
cairo-lang-compiler = "2.16.0"
cairo-lang-defs = "2.16.0"
cairo-lang-filesystem = "2.16.0"
cairo-lang-lowering = "2.16.0"
cairo-lang-starknet = "2.16.0"
cairo-lang-starknet-classes = "2.16.0"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scarb-stable-hash = "1.0.0"
salsa = "0.26.0"
sysinfo = "0.31"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2"
