[package]
name = "uc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "uc"
path = "src/main.rs"

[features]
default = []
dev-benchmark-command = []

[dependencies]
anyhow.workspace = true
blake3.workspace = true
cairo-lang-compiler = "2.16.0"
cairo-lang-defs = "2.16.0"
cairo-lang-filesystem = "2.16.0"
cairo-lang-lowering = "2.16.0"
cairo-lang-starknet = "2.16.0"
clap.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uc-core = { path = "../uc-core" }
walkdir.workspace = true
