[package]
name = "uc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "uc"
path = "src/main.rs"

[features]
default = ["native-compile", "mimalloc", "embedded-corelib"]
native-compile = [
  "dep:cairo-lang-compiler",
  "dep:cairo-lang-defs",
  "dep:cairo-lang-filesystem",
  "dep:cairo-lang-lowering",
  "dep:cairo-lang-starknet",
  "dep:cairo-lang-starknet-classes",
  "dep:notify",
  "dep:postcard",
  "dep:scarb-stable-hash",
]
# Embedded corelib path is compile-time optional so local/dev builds can opt out.
embedded-corelib = ["dep:include_dir"]
# `default-features = false` is inherited from workspace; this intentionally
# prioritizes allocator throughput over mimalloc's optional hardened modes.
mimalloc = ["dep:mimalloc"]
dev-benchmark-command = []

[dependencies]
anyhow.workspace = true
blake3.workspace = true
cairo-lang-compiler = { workspace = true, optional = true }
cairo-lang-defs = { workspace = true, optional = true }
cairo-lang-filesystem = { workspace = true, optional = true }
cairo-lang-lowering = { workspace = true, optional = true }
cairo-lang-starknet = { workspace = true, optional = true }
cairo-lang-starknet-classes = { workspace = true, optional = true }
clap.workspace = true
include_dir = { workspace = true, optional = true }
libc.workspace = true
mimalloc = { workspace = true, optional = true }
notify = { workspace = true, optional = true }
postcard = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
scarb-stable-hash = { workspace = true, optional = true }
salsa.workspace = true
sysinfo.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uc-core = { path = "../uc-core" }
walkdir.workspace = true
