[package]
name = "uc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "uc"
path = "src/main.rs"

[features]
default = ["native-compile"]
native-compile = [
  "dep:cairo-lang-compiler",
  "dep:cairo-lang-defs",
  "dep:cairo-lang-filesystem",
  "dep:cairo-lang-lowering",
  "dep:cairo-lang-semantic",
  "dep:cairo-lang-starknet",
  "dep:cairo-lang-starknet-classes",
  "dep:notify",
  "dep:scarb-stable-hash",
]
dev-benchmark-command = []

[dependencies]
anyhow.workspace = true
blake3.workspace = true
cairo-lang-compiler = { workspace = true, optional = true }
cairo-lang-defs = { workspace = true, optional = true }
cairo-lang-filesystem = { workspace = true, optional = true }
cairo-lang-lowering = { workspace = true, optional = true }
cairo-lang-semantic = { workspace = true, optional = true }
cairo-lang-starknet = { workspace = true, optional = true }
cairo-lang-starknet-classes = { workspace = true, optional = true }
clap.workspace = true
libc.workspace = true
notify = { workspace = true, optional = true }
postcard.workspace = true
serde.workspace = true
serde_json.workspace = true
scarb-stable-hash = { workspace = true, optional = true }
salsa.workspace = true
sysinfo.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uc-core = { path = "../uc-core" }
walkdir.workspace = true
